--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: MIT
 Imports: meffil (>= 1.1.0), impute (>= 1.54.0), Rcpp (>= 0.12.18)
-Suggests: RPMM, Biobase
+Suggests: RPMM, Biobase, tidyverse
 LinkingTo: Rcpp
 Encoding: UTF-8
 LazyData: true
