--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+*/*_files
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
