--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: methylclock
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.2.0
-Date: 2019-05-22
+Version: 0.3.0
+Date: 2019-09-19
 Author: Juan R Gonzalez
 Maintainer: Juan R Gonzalez <juanr.gonzalez@isglobal.org>
 Description: This manual describes how to estimate DNA methylation age (DNAmAge) using different methylation clocks. 
 License: MIT
-Imports: meffil, impute, Hmisc, Rcpp
-Suggests: RPMM, Biobase, tidyverse
+Imports: meffil, impute, Hmisc, Rcpp, tidyverse
+Suggests: RPMM, Biobase
 LinkingTo: Rcpp
 Encoding: UTF-8
 LazyData: true
