uploaded new version
2 clocks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,10 @@
 
 export(BMIQcalibration)
 export(DNAmAge)
-export(DNAmGestationalAge)
+export(DNAmGA)
 export(checkClocks)
+export(checkClocksGA)
 export(plotDNAmAge)
-
 
 useDynLib(methylclock, .registration=TRUE)
 
