--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,4 @@ useDynLib(methylclock, .registration=TRUE)
 importFrom(meffil, meffil.estimate.cell.counts.from.betas)
 importFrom(impute, impute.knn)
 importFrom(Rcpp, evalCpp, sourceCpp)
+importFrom(dplyr, full_join, as_tibble)
