fix: added imports to load dplyr and tibble automatically

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,7 @@ export(checkClocks)
 export(checkClocksGA)
 export(plotCorClocks)
 export(plotDNAmAge)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,full_join)
+importFrom(tibble,add_column)
+importFrom(tibble,as_tibble)
