data in BioC methylclockData package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,17 @@ export(meffil.estimate.cell.counts.from.betas)
 export(meffil.list.cell.type.references)
 export(plotCorClocks)
 export(plotDNAmAge)
+import(Biobase)
+import(ExperimentHub)
 import(PerformanceAnalytics)
 import(Rcpp)
 import(devtools)
 import(dplyr)
 import(ggplot2)
+import(ggpmisc)
 import(ggpubr)
 import(impute)
+import(minfi)
 import(preprocessCore)
 import(quadprog)
 import(tibble)
