--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: methylclock
 Type: Package
-Title: Chronological and gestational DNAm age estimation using different methylation-based clocks
+Title: This package allows to estimate chronological and gestational DNA methylation
+       (DNAm) age as well as biological age using different methylation clocks.
 Version: 0.7.5
 Date: 2021-05-04
 Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", role = "aut"),
@@ -15,10 +16,12 @@ biocViews:
 License: MIT + file LICENSE
 Depends: 
   R (>= 3.6.0),
+  methylclockData,
   devtools,
   quadprog
 Imports: 
   Rcpp,
+  ExperimentHub,
   dplyr, 
   impute, 
   PerformanceAnalytics,
