more updates about methylclockData package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,20 +5,21 @@ export(DNAmAge)
 export(DNAmGA)
 export(checkClocks)
 export(checkClocksGA)
+export(load_DNAmGA_Clocks_data)
+export(load_DNAm_Clocks_data)
 export(meffil.estimate.cell.counts.from.betas)
 export(meffil.list.cell.type.references)
 export(plotCorClocks)
 export(plotDNAmAge)
-import(Biobase)
 import(ExperimentHub)
 import(PerformanceAnalytics)
 import(Rcpp)
 import(devtools)
 import(dplyr)
 import(ggplot2)
-import(ggpmisc)
 import(ggpubr)
 import(impute)
+import(methylclockData)
 import(minfi)
 import(preprocessCore)
 import(quadprog)
