devtools check - Pass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(DNAmAge)
 export(DNAmGA)
 export(checkClocks)
 export(checkClocksGA)
+export(get.cell.type.reference)
 export(load_DNAmGA_Clocks_data)
 export(load_DNAm_Clocks_data)
 export(meffil.estimate.cell.counts.from.betas)
@@ -20,13 +21,14 @@ import(ggplot2)
 import(ggpubr)
 import(impute)
 import(methylclockData)
-import(minfi)
 import(preprocessCore)
 import(quadprog)
 import(tibble)
 import(tidyverse)
 importFrom(Biobase,exprs)
 importFrom(Biobase,featureNames)
+importFrom(RPMM,betaObjf)
+importFrom(RPMM,blc)
 importFrom(Rcpp,evalCpp)
 importFrom(ggpmisc,stat_poly_eq)
 importFrom(minfi,getBeta)
