--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: methylclock
 Type: Package
-Title: This package allows to estimate chronological and gestational DNA methylation
-       (DNAm) age as well as biological age using different methylation clocks.
+Title: Methylclock - DNA methylation-based clocks
 Version: 0.7.5
 Date: 2021-05-04
 Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", role = "aut"),
               person("Juan R.", "Gonzalez", ,"juanr.gonzalez@isglobal.org", role = c("aut", "cre")))
-Description: Package to estimate DNA methylation age (DNAmAge) using different methylation clocks. 
+Description: This package allows to estimate chronological and gestational DNA methylation
+       (DNAm) age as well as biological age using different methylation clocks.
+       Chronological DNAm age (in years) : Horvath's clock, Hannum's clock, BNN, 
+       Horvath's skin+blood clock, PedBE clock and Wu's clock
+       Gestational DNAm age : Knight's clock, Bohlin's clock, Mayne's clock and Lee's clocks
+       Biological DNAm clocks : Levine's clock and Telomere Length's clock
 biocViews: 
   DNAMethylation,
   BiologicalQuestion,
@@ -15,7 +19,7 @@ biocViews:
   Normalization
 License: MIT + file LICENSE
 Depends: 
-  R (>= 3.6.0),
+  R (>= 4.1.0),
   methylclockData,
   devtools,
   quadprog
@@ -26,20 +30,20 @@ Imports:
   impute, 
   PerformanceAnalytics,
   Biobase,
+  ggpmisc,
   tidyverse,
   ggplot2, 
-  ggpmisc, 
   ggpubr, 
   minfi, 
   tibble,
+  RPMM,
   preprocessCore
 Suggests: 
-  RPMM,
-  BiocStyle, 
+  BiocStyle,
   knitr, 
+  GEOquery,
   rmarkdown
 LinkingTo: Rcpp
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
