--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: methylclock
 Type: Package
 Title: Methylclock - DNA methylation-based clocks
-Version: 0.7.5
+Version: 0.99.0
 Date: 2021-05-04
-Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", role = "aut"),
-              person("Juan R.", "Gonzalez", ,"juanr.gonzalez@isglobal.org", role = c("aut", "cre")))
+Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", role = c("aut", "cre")),
+              person("Juan R.", "Gonzalez", ,"juanr.gonzalez@isglobal.org", role = c("aut")))
 Description: This package allows to estimate chronological and gestational DNA methylation
        (DNAm) age as well as biological age using different methylation clocks.
        Chronological DNAm age (in years) : Horvath's clock, Hannum's clock, BNN, 
-       Horvath's skin+blood clock, PedBE clock and Wu's clock
-       Gestational DNAm age : Knight's clock, Bohlin's clock, Mayne's clock and Lee's clocks
-       Biological DNAm clocks : Levine's clock and Telomere Length's clock
+       Horvath's skin+blood clock, PedBE clock and Wu's clock.
+       Gestational DNAm age : Knight's clock, Bohlin's clock, Mayne's clock and Lee's clocks.
+       Biological DNAm clocks : Levine's clock and Telomere Length's clock.
 biocViews: 
   DNAMethylation,
   BiologicalQuestion,
@@ -37,6 +37,8 @@ Imports:
   minfi, 
   tibble,
   RPMM,
+  stats,
+  graphics,
   preprocessCore
 Suggests: 
   BiocStyle,
