reference gather function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,4 +46,5 @@ importFrom(stats,qbeta)
 importFrom(stats,rbeta)
 importFrom(stats,resid)
 importFrom(stats,rmultinom)
+importFrom(tidyr,gather)
 useDynLib(methylclock)
