--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: methylclock
 Type: Package
 Title: Methylclock - DNA methylation-based clocks
-Version: 0.99.7
+Version: 0.99.8
 Date: 2021-05-04
 Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", role = c("aut", "cre")),
               person("Juan R.", "Gonzalez", ,"juanr.gonzalez@isglobal.org", role = c("aut")))
@@ -39,6 +39,7 @@ Imports:
   RPMM,
   stats,
   graphics,
+  tidyr,
   preprocessCore
 Suggests: 
   BiocStyle,
