--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: methylclock
 Type: Package
 Title: Methylclock - DNA methylation-based clocks
-Version: 0.99.11
+Version: 0.99.12
 Date: 2021-05-04
 Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", role = c("aut", "cre")),
               person("Juan R.", "Gonzalez", ,"juanr.gonzalez@isglobal.org", role = c("aut")))
@@ -24,7 +24,7 @@ Depends:
   devtools,
   quadprog
 Imports: 
-  Rcpp,
+  Rcpp (>= 1.0.6),
   ExperimentHub,
   dplyr, 
   impute, 
