--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(Biobase,featureNames)
 importFrom(RPMM,betaObjf)
 importFrom(RPMM,blc)
 importFrom(Rcpp,evalCpp)
+importFrom(dynamicTreeCut,printFlush)
 importFrom(ggpmisc,stat_poly_eq)
 importFrom(graphics,par)
 importFrom(graphics,points)
