Some changes according to BioC requirements
- Remove date from description
- Remove '.' from function names
- Reconfigure .Rd NEWS file
- Remove eval from readme
- Update installation instructions
- Expand man pages for data
- Remove files from vignette directory
- Update vignette
- Create accessor functions to remove '$' and '@'
- Change diverse output messages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,12 @@ export(DNAmAge)
 export(DNAmGA)
 export(checkClocks)
 export(checkClocksGA)
-export(get.cell.type.reference)
+export(commonClockCpgs)
+export(getCellTypeReference)
 export(load_DNAmGA_Clocks_data)
 export(load_DNAm_Clocks_data)
-export(meffil.estimate.cell.counts.from.betas)
-export(meffil.list.cell.type.references)
+export(meffilEstimateCellCountsFromBetas)
+export(meffilListCellTypeReferences)
 export(plotCorClocks)
 export(plotDNAmAge)
 import(ExperimentHub)
