--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,4 +49,6 @@ Suggests:
 LinkingTo: Rcpp
 Encoding: UTF-8
 RoxygenNote: 7.1.1
+URL: https://github.com/isglobal-brge/methylclock
+BugReports: https://github.com/isglobal-brge/methylclock/issues
 VignetteBuilder: knitr
