--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,8 @@ Suggests:
   rmarkdown
 LinkingTo: Rcpp
 Encoding: UTF-8
+URL: https://github.com/isglobal-brge/methylclock
+BugReports: https://github.com/isglobal-brge/methylclock/issues
 LazyData: true
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
