Added placenta cell counts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,5 +24,7 @@ importFrom(Biobase,exprs)
 importFrom(Biobase,featureNames)
 importFrom(Rcpp,evalCpp)
 importFrom(ggpmisc,stat_poly_eq)
+importFrom(gridExtra,grid.arrange)
 importFrom(minfi,getBeta)
+importFrom(tidyr,gather)
 useDynLib(methylclock)
