--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: methylclock
 Type: Package
 Title: Chronological and gestational DNAm age estimation using different methylation-based clocks
-Version: 0.7.8
+Version: 0.7.9
 Date: 2022-01-10
 Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", role = "aut"),
               person("Juan R.", "Gonzalez", ,"juanr.gonzalez@isglobal.org", role = c("aut", "cre")))
@@ -24,10 +24,13 @@ Imports:
   PerformanceAnalytics,
   Biobase,
   tidyverse,
+  tidyr,
   ggplot2, 
+  gridExtra,
   ggpmisc, 
   ggpubr, 
   minfi, 
+  planet,
   tibble,
   preprocessCore
 Suggests: 
