Added EPIC, EN and BLUP clocks to BioC 3.15

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(dynamicTreeCut,printFlush)
 importFrom(ggpmisc,stat_poly_eq)
 importFrom(graphics,par)
 importFrom(graphics,points)
+importFrom(gridExtra,grid.arrange)
 importFrom(minfi,getBeta)
 importFrom(stats,IQR)
 importFrom(stats,approx)
