--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Imports:
   graphics,
   tidyr,
   preprocessCore,
-  dynamicTreeCut
+  dynamicTreeCut,
+  planet
 Suggests: 
     BiocStyle,
     knitr,
@@ -48,7 +49,7 @@ Suggests:
     rmarkdown
 LinkingTo: Rcpp
 Encoding: UTF-8
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 URL: https://github.com/isglobal-brge/methylclock
 BugReports: https://github.com/isglobal-brge/methylclock/issues
 VignetteBuilder: knitr
