--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,14 @@
 Package: methylclock
 Type: Package
 Title: Methylclock - DNA methylation-based clocks
-Version: 1.1.2
-Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", role = c("aut", "cre")),
-              person("Juan R.", "Gonzalez", ,"juanr.gonzalez@isglobal.org", role = c("aut")))
+Version: 1.1.3
+Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", 
+                      role = c("aut", "cre"), 
+                      comment = c(ORCID = "0000-0002-5993-3003")),
+              person("Juan R.", "Gonzalez", ,"juanr.gonzalez@isglobal.org", 
+                     role = c("aut"), 
+                     comment = c(ORCID = "0000-0003-3267-2146"))
+              )
 Description: This package allows to estimate chronological and gestational DNA methylation
        (DNAm) age as well as biological age using different methylation clocks.
        Chronological DNAm age (in years) : Horvath's clock, Hannum's clock, BNN, 
