--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: methylclock
 Type: Package
 Title: Methylclock - DNA methylation-based clocks
-Version: 1.1.3
+Version: 1.1.4
 Authors@R: c( person("Dolors", "Pelegri-Siso", , "dolors.pelegri@isglobal.org", 
                       role = c("aut", "cre"), 
                       comment = c(ORCID = "0000-0002-5993-3003")),
@@ -44,6 +44,7 @@ Imports:
   stats,
   graphics,
   tidyr,
+  gridExtra,
   preprocessCore,
   dynamicTreeCut,
   planet
